--- a/apps/dashboard/src/main/resources/cloud_formation_templates/kubernetes_setup.yaml
+++ b/apps/dashboard/src/main/resources/cloud_formation_templates/kubernetes_setup.yaml
@@ -204,6 +204,7 @@ Resources:
             - sudo yum install -y python python-setuptools
             - sudo yum install -y docker
             - sudo dockerd&
+            - sudo systemctl enable /usr/lib/systemd/system/docker.service
             - sudo mkdir -p /opt/aws/bin
             - export COMPOSE_FILE=docker-compose-context-analyser.yml
             - >-
@@ -348,6 +349,7 @@ Resources:
             - sudo yum install -y python python-setuptools
             - sudo yum install -y docker
             - sudo dockerd&
+            - sudo systemctl enable /usr/lib/systemd/system/docker.service
             - sudo mkdir -p /opt/aws/bin
             - export COMPOSE_FILE=docker-compose-runtime.yml
             - >-
