--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -25,12 +25,12 @@ on:
         options:
           - prod
           - staging
-        default: staging
+        default: prod
       Deploy:
         description: 'Deploy to flash staging'
         required: false
         type: boolean
-        default: false
+        default: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
