--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -142,10 +142,13 @@ jobs:
         role-session-name: GitHub-Action-Role
         aws-region: ${{ vars.AWS_REGION }}
     - name: Deploy to flash
+      env:
+        GITHUB_REF: env.GITHUB_REF
+
       run: |
-        echo "Deploying branch ${{ env.GITHUB_REF }} to ${{ github.event.inputs.environment }}"
+        echo "Deploying branch $GITHUB_REF to ${{ github.event.inputs.environment }}"
         commit_hash=`git rev-parse HEAD`
-        aws deploy create-deployment --application-name flash-deploy --deployment-group-name flash-deployment-group --github-location repository=$GITHUB_REPOSITORY,commitId=$commit_hash --ignore-application-stop-failures
+#        aws deploy create-deployment --application-name flash-deploy --deployment-group-name flash-deployment-group --github-location repository=$GITHUB_REPOSITORY,commitId=$commit_hash --ignore-application-stop-failures
 
   test:
 #    if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
