--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -64,7 +64,7 @@ jobs:
         working-directory: ./apps/dashboard/web/polaris_web
         run: npm install && export RELEASE_VERSION=${{steps.docker_tag.outputs.IMAGE_TAG}} && npm run build
       - name: Configure AWS Credentials
-        if: ${{ github.event.inputs.Environment == 'prod' }}
+#        if: ${{ github.event.inputs.Environment == 'prod' }}
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
@@ -72,7 +72,7 @@ jobs:
           aws-region: ap-south-1
 
       - name: Deploy static site to S3 bucket
-        if: ${{ github.event.inputs.Environment == 'prod' }}
+#        if: ${{ github.event.inputs.Environment == 'prod' }}
         run: aws s3 sync ./apps/dashboard/web/dist s3://dashboard-on-cdn/web/${{steps.docker_tag.outputs.IMAGE_TAG}}/dist --delete
       - name: Deploy polaris site to S3 bucket
         if: ${{ github.event.inputs.Environment == 'prod' }}
@@ -80,14 +80,14 @@ jobs:
 
       - run: mvn package -Dakto-image-tag=${{ github.event.inputs.Tag }} -Dakto-build-time=$(eval "date +%s") -Dakto-release-version=${{steps.docker_tag.outputs.IMAGE_TAG}}
       - name: DockerHub login
-        if: ${{ github.event.inputs.Environment == 'prod' }}
+#        if: ${{ github.event.inputs.Environment == 'prod' }}
         env:
           DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Build, tag, and push the image to DockerHub
-        if: ${{ github.event.inputs.Environment == 'prod' }}
+#        if: ${{ github.event.inputs.Environment == 'prod' }}
         id: build-image-dockerhub
         env:
           ECR_REGISTRY: aktosecurity
