--- a/apps/dashboard/pom.xml
+++ b/apps/dashboard/pom.xml
@@ -215,6 +215,12 @@
             <artifactId>mvc-auth-commons</artifactId>
             <version>1.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
