--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/UnwantedResponseHeaders.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/UnwantedResponseHeaders.yaml
@@ -23,6 +23,7 @@ info:
     - "https://portswigger.net/web-security/host-header/exploiting"
     - "https://blog.yeswehack.com/yeswerhackers/http-header-exploitation/"
   cwe:
+    - CWE-200
     - CWE-16
   cve:
     - CVE-2022-3215
