--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlDebugModeEnabled.yaml
@@ -30,6 +30,7 @@ info:
     - "https://0xn3va.gitbook.io/cheat-sheets/web-application/graphql-vulnerabilities"
   cwe:
     - CWE-16
+    - CWE-200
 
 api_selection_filters:
   url:
