--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/HeaderReflectedInInvalidUrl.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/HeaderReflectedInInvalidUrl.yaml
@@ -19,6 +19,7 @@ info:
   references:
     - "https://hackerone.com/reports/792998"
   cwe:
+    - CWE-113
     - CWE-16
   cve:
     - CVE-2022-37724
